--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   intl: ^0.19.0
   uuid: ^4.2.2
   cupertino_icons: ^1.0.8
+  file_picker: ^10.3.7
 
 dev_dependencies:
   flutter_test:
